[package]
name = "terminus"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
async-trait = "0.1"
dirs = "5.0"
open = "4.1"
crossterm = "0.26"
rand = "0.8"
chrono = "0.4"
parking_lot = "0.12"
